Fix footer div structure and add newline at end

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     <!-- FOOTER -->
     <footer class="site-footer" id="site-footer">
-        <div class="footer-inner container">
+        <div class="footer-inner">
             <div class="footer-left">
                 <strong>Stock Insight</strong>
                 <p class="muted">Practical stock market education for real traders.</p>
