Add mobile number input to contact form
Added mobile number input field to the contact form.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                     <article class="course card" data-id="foundations" data-price="299.00" tabindex="0">
                         <h3>Foundations of Investing</h3>
                         <p class="muted">8 weeks • Beginner</p>
-                        <p>Understand markets, company analysis, and long-term investing strategies. <strong>Course Fee: ₹299</strong></p>
+                        <p>Understand markets, company analysis, and long-term investing strategies. <strong>Course Fee:
+                                ₹299</strong></p>
                         <ul>
                             <li>Understanding financial statements</li>
                             <li>Valuation fundamentals</li>
@@ -91,7 +92,8 @@
                     <article class="course card" data-id="technical" data-price="199.00" tabindex="0">
                         <h3>Technical Trading Lab</h3>
                         <p class="muted">6 weeks • Intermediate</p>
-                        <p>Price action, indicators, and live trade setups focused on practical trading. <strong>Course Fee: ₹199</strong></p>
+                        <p>Price action, indicators, and live trade setups focused on practical trading. <strong>Course
+                                Fee: ₹199</strong></p>
                         <ul>
                             <li>Support & resistance, trend analysis</li>
                             <li>Risk & money management</li>
@@ -105,7 +107,8 @@
                     <article class="course card" data-id="options" data-price="249.00" tabindex="0">
                         <h3>Options Strategies Bootcamp</h3>
                         <p class="muted">4 weeks • Advanced</p>
-                        <p>Options basics to advanced strategies for hedging and income generation. <strong>Course Fee: ₹249</strong></p>
+                        <p>Options basics to advanced strategies for hedging and income generation. <strong>Course Fee:
+                                ₹249</strong></p>
                         <ul>
                             <li>Spreads, iron condors, protective hedges</li>
                             <li>Volatility and Greeks</li>
@@ -119,7 +122,8 @@
                     <article class="course card" data-id="daytrading" data-price="349.00" tabindex="0">
                         <h3>Day Trading Masterclass</h3>
                         <p class="muted">10 weeks • Advanced</p>
-                        <p>Master intraday trading with real-time market analysis and risk management. <strong>Course Fee: ₹349</strong></p>
+                        <p>Master intraday trading with real-time market analysis and risk management. <strong>Course
+                                Fee: ₹349</strong></p>
                         <ul>
                             <li>Scalping & momentum trading strategies</li>
                             <li>Real-time chart analysis & entry/exit timing</li>
@@ -133,7 +137,8 @@
                     <article class="course card" data-id="fundamental" data-price="279.00" tabindex="0">
                         <h3>Fundamental Analysis Pro</h3>
                         <p class="muted">7 weeks • Intermediate</p>
-                        <p>Deep dive into company financials, sector analysis, and value investing. <strong>Course Fee: ₹279</strong></p>
+                        <p>Deep dive into company financials, sector analysis, and value investing. <strong>Course Fee:
+                                ₹279</strong></p>
                         <ul>
                             <li>Financial statement analysis & ratios</li>
                             <li>Industry & competitive analysis</li>
@@ -203,6 +208,12 @@
                         <label for="email">Email</label>
                         <input id="email" name="email" type="email" placeholder="you@example.com" required>
                     </div>
+
+                    <div class="form-row">
+                        <label for="mobile">Mobile Number</label>
+                        <input type="text" id="mobile" name="mobile" placeholder="Enter 10-digit mobile number">
+                    </div>
+
 
                     <div class="form-row">
                         <label for="message">Message</label>
